Lots of UI code for msg sending
Code for sending messages

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,6 +21,31 @@
             android:layout_height="wrap_content"
             android:text="Start Service" />
 
+        <EditText
+            android:id="@+id/alertMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Message to include"
+            android:maxLength="80" >
+
+            <requestFocus />
+        </EditText>
+
+        <Button
+            android:id="@+id/addContact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add contact" />
+
+        <LinearLayout
+            android:id="@+id/existingContacts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
